 $Id: ChangeLog,v 1.131.2.25.2.8 2008/11/23 10:01:09 uehira Exp $

2008-11-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.h : introduced TIME_OFFSET.
	* src/winlib.h : all SR_MON definition moved to this file.
	* src/winlib.c : added win_chheader_info().

2008-11-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.c : added Shm_init().
	* src/winlib.c : added WIN_version().

2008-11-14  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* wck : 64 bit clean.
	* Version 2.0.2 released.

2008-11-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.98-LIB release.
	* install include files.
        * src/winlib.h : remove LongFromBigEndian(a) macro.
	* src/winlib.c : read_onesec_win() is moved from src/win_system.c.
	* dewin.c, wadd.c, wadd2.c, wck.c, wck_wdisk.c
	               : replace read_data() with read_onesec_win().

2008-11-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* suppress warnings.
	* MF Version 1.1.97-LIB release.
	* src/recvs.c, src/sends.c : use library (src/win_log.c).	
	* src/recvstatus.c, src/recvstatus2.c: use library (src/win_log.c).
	* Version 2.0.1 released.
	
2008-11-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* new branch 'rel-64bit' for 64 bit environment from 1.1.96-LIB release.
	* src/winlib.h : check byte length.
	* src/winlib.c : get_time(), mklong()-->mkuint4(), mkshort()-->mkuint2()
	* Version 2.0.0 released.

2008-11-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* if 'char' is unsigned, exit make command.
	* Version 1.1.96-LIB released.

2008-06-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/chtbl2kml : added.

2008-05-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.95-LIB released.
	* src/winlib.c : dec_bcd() : bug fixed from 2008-05-16 commitment.

2008-05-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* struct Shm : src/winlib.h

2008-05-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* SWAPL(a), SWAPS(a), SWAPF(a) : common	declaration in src/winlib.h. 