@@ -1,4 +1,4 @@
-/* $Id: relay.c,v 1.15.4.3 2008/05/17 14:22:02 uehira Exp $ */
+/* $Id: relay.c,v 1.15.4.3.2.1 2008/12/17 05:53:15 uehira Exp $ */
 /* "relay.c"      5/23/94-5/25/94,6/15/94-6/16/94,6/23/94,3/16/95 urabe */
 /*                3/26/95 check_packet_no; port# */
 /*                5/24/96 added processing of "host table full" */
@@ -52,6 +52,9 @@
 
 #include <sys/socket.h>
 #include <netinet/in.h>
+#if HAVE_ARPA_INET_H
+#include <arpa/inet.h>
+#endif
 #include <netdb.h>
 #include <errno.h>
 #include <syslog.h>
